# eufy-clean

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  RELEASE_NOTES.md  pyproject.toml  requirements_test.txt  task-7-clean-param.txt  task-7-map-data.txt  task-7-station.txt  test_missing_data_handling.py
.claude/: settings.json
.github/workflows/: auto-request-copilot-review.yml  lint.yaml  tests.yaml
.sisyphus/evidence/: f1-compliance.txt  f2-integration-tests.txt  f2-unit-tests.txt  f3-manual-qa.txt  f4-scope.txt  task-1-anonymize-help.txt  task-1-anonymizer-pii-check.txt  task-1-capture-help.txt  task-10-commands.txt  task-10-invalid-commands.txt  task-11-config-flow.txt  task-11-login-failure.txt  (+36 more)
docs/: DPS_179_TELEMETRY.md  DPS_DISCOVERY.md  MQTT_PROTOCOL.md  P2P_PROTOCOL.md  SEND_COMMAND_REFERENCE.md
tests/: conftest.py  generate_fixtures.py  test_analysis_stats_t20.py  test_api.py  test_binary_sensor.py  test_button.py  test_button_rc.py  test_button_resume.py  test_calendar.py  test_calendar_events.py  test_camera.py  test_client.py  test_cloud.py  test_commands.py  test_commands_t16.py  test_config_flow.py  test_consumable_t12.py  test_coordinator.py  test_descriptions.py  test_diagnostics.py  test_dps154_enhancements.py  test_dps_catalog.py  test_entities_work_status_t9.py  test_entity_golden.py  test_entity_visibility.py  test_error_handling_matter.py  test_event.py  test_http.py  test_init.py  test_map_renderer.py  test_media_manager_t28.py  test_missing_data_handling.py  test_mqtt_integration.py  test_new_entities.py  test_number.py  test_orphaned_devices.py  test_parser.py  test_parser_clean_times_t7.py  test_parser_cleaning_stats.py  test_parser_device_info_t6.py  (+27 more)
tools/: README.md  anonymize_fixtures.py  eufy_mqtt_client.py  extract_key_from_backup.py  mitm_attack.py  requirements.txt  run.py  validate_key.py
(+198 files in other folders)
